2002-03-16  Neil Jerram  <neil@ossau.uklinux.net>

	* filesys.c (scm_close): Fix stale cross reference in docstring.

2002-03-15  Thien-Thi Nguyen  <ttn@giblet.glug.org>

	* guile-snarf.in: Remove "--compat=1.4" support.
	Add "-d" and "-D" support.

	(deprecated_list): New var.
	(compat_mode_clean_xxx): Delete.
	(grep_deprecated): New func.
	("main"): If "-d" or "-D", call `grep_deprecated'.

2002-03-15  Neil Jerram  <neil@ossau.uklinux.net>

	* posix.c (scm_execl): Remove spurious whitespace from docstring.

	* unif.c (scm_array_contents): Remove duplicate @deffnx line.

	* struct.c (scm_struct_p, scm_struct_vtable_p): Align variable
	name in docstring with C parameter name.

	* sort.c (scm_merge), stacks.c (scm_make_stack): Take clearer
	docstrings from unstable branch.

	* print.c (scm_newline): Say what if port arg is omitted.

	* objprop.c (scm_object_properties, scm_set_object_properties_x,
	scm_object_property, scm_set_object_property_x): Remove incorrect
	@deffnx lines from docstrings.

	* debug.c (scm_debug_options): Change incorrect @var in docstring
	to @code.

2002-03-14  Neil Jerram  <neil@ossau.uklinux.net>

	* strop.c (scm_string_split): Correct quoting in docstring.
	(scm_string_ci_to_symbol): Correct hyphen.

	* ports.c (scm_sys_make_void_port): Add @file to docstring.

	* numbers.c (scm_number_p, scm_real_p): In docstring, change
	`else' to `otherwise'.

	* macros.c (scm_makmacro, scm_makmmacro): Correct docstring.
	(scm_macro_type): Correct spelling mistake.

	* eval.c (scm_eval, scm_eval_options_interface), read.c
	(scm_read_options): Change incorrect @var in docstring to @code.

	* backtrace.c (scm_display_error), filesys.c (scm_umask,
	scm_select, scm_basename), goops.c (scm_method_generic_function),
	numbers.c (scm_integer_length), ports.c
	(scm_close_all_ports_except), posix.c (scm_getgroups, scm_execl,
	scm_setlocale, scm_flock), socket.c (scm_shutdown): Correct
	spelling mistakes.
